--- a/my_theme_customizations/main.html
+++ b/my_theme_customizations/main.html
@@ -7,6 +7,8 @@
 
 {% block libs %}
     {{ super() }}
+    <script src="{{ base_url }}/xtra/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="{{ base_url }}/xtra/gifplayer/gif-player.es6.js" defer async></script>
     <!-- Load CDNs : Pyodide (Python in WASM), Ace (Editor) and JQuery (Terminal) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ace.js" type="text/javascript" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.4.12/ext-language_tools.min.js" type="text/javascript" charset="utf-8"></script>
